# sisop2

./: .travis.yml  CMakeLists.txt  README.md
app/: client.cpp  main.cpp  server.cpp
cmake/: CodeCoverage.cmake  Colors.cmake  ConfigSafeGuards.cmake
include/: example.h
include/application/: DefaultPrinterService.h  DefaultUserService.h  KeyLock.h  PrinterService.h  UserFactory.h  UserService.h
include/infra/handler/: DownloadFileCommandHandler.h  DownloadFileHandler.h  DownloadFileRequest.h  DownloadFileResponse.h  DownloadFileResponseHandler.h  DummyMessageHandler.h  EstablishSessionHandler.h  EstablishSessionRequest.h  ExitCommandHandler.h  IpClientHandler.h  ListClientEntriesCommandHandler.h  ListFileEntriesHandler.h  ListFileEntriesResponse.h  ListServerDirectoriesHandler.h  ListServerDirectoriesRequest.h  ListServerDirectoriesResponse.h  ListServerDirectoriesResponseHandler.h  ListServerEntriesCommandHandler.h  ListServerEntriesResponseHandler.h  RemoveFileCommandHandler.h  RemoveFileHandler.h  RemoveFileRequest.h  SaveFileHandler.h  StartAreYouAliveCommandHandler.h  SyncEndpoints.h  SyncEntriesResponseHandler.h  SyncFileResponseHandler.h  UpdateBackupsListHandler.h  UpdateBackupsListRequest.h  UploadFileCommandHandler.h  UploadFileRequest.h
include/infra/messaging/: AsyncMessageListener.h  AsyncMessageListenerFactory.h  BlockingCommandListener.h  BlockingMessageListener.h  CommandHandler.h  ConnectionListener.h  ListenerLoop.h  Message.h  MessageHandler.h  MessageListener.h  MessageListenerFactory.h  MessageStreamer.h  OpenListenerLoop.h  ReconnectableTcpSocket.h  SecondarySocket.h  SerializedMessageHandler.h  Socket.h  SocketException.h  SocketMessageStreamer.h  TcpSocket.h
include/infra/repository/: DefaultUserRepository.h  FileNotFoundException.h  FileUserRepository.h  SystemFileRepository.h  file_user_repository.h
include/infra/synchronization/: DefaultKeyLock.h  ReadWriteLock.h  TemporalSynchronizer.h
include/server/: Clock.h  DefaultUser.h  File.h  FileEntry.h  FileRepository.h  RemovedEntry.h  ReplicaManagers.h  ServerDescription.h  Session.h  SyncOperation.h  SystemClock.h  Timestamps.h  User.h  UserRepository.h  file.h  user.h  user_repository.h
src/: example.cpp
src/application/: DefaultPrinterService.cpp  DefaultUserService.cpp
src/infra/handler/: DownloadFileCommandHandler.cpp  DownloadFileHandler.cpp  DownloadFileResponseHandler.cpp  DummyMessageHandler.cpp  EstablishSessionHandler.cpp  ExitCommandHandler.cpp  IpClientHandler.cpp  ListClientEntriesCommandHandler.cpp  ListFileEntriesHandler.cpp  ListServerDirectoriesHandler.cpp  ListServerDirectoriesResponseHandler.cpp  ListServerEntriesCommandHandler.cpp  ListServerEntriesResponseHandler.cpp  RemoveFileCommandHandler.cpp  RemoveFileHandler.cpp  SaveFileHandler.cpp  StartAreYouAliveCommandHandler.cpp  SyncEntriesResponseHandler.cpp  SyncFileResponseHandler.cpp  UpdateBackupsListHandler.cpp  UploadFileCommandHandler.cpp
src/infra/messaging/: AsyncMessageListener.cpp  AsyncMessageListenerFactory.cpp  BlockingCommandListener.cpp  BlockingMessageListener.cpp  ConnectionListener.cpp  ReconnectableTcpSocket.cpp  SecondarySocket.cpp  SocketMessageStreamer.cpp  TcpSocket.cpp
src/infra/repository/: DefaultUserRepository.cpp  FileUserRepository.cpp  SystemFileRepository.cpp  file_user_repository.cpp
src/infra/synchronization/: DefaultKeyLock.cpp  ReadWriteLock.cpp  TemporalSynchronizer.cpp
src/server/: DefaultUser.cpp  File.cpp  ReplicaManagers.cpp  SystemClock.cpp  User.cpp  user.cpp
tests/: dummy.cpp
tests/application/: DefaultPrinterServiceTest.cpp  DefaultUserServiceTest.cpp  MockKeyLock.h  MockPrinterService.h  MockUserService.h
tests/infra/handler/: DownloadFileCommandHandlerTest.cpp  DownloadFileHandlerTest.cpp  DownloadFileRequestTest.cpp  DownloadFileResponseHandlerTest.cpp  DownloadFileResponseTest.cpp  EstablishSessionRequestTest.cpp  ExitCommandHandlerTest.cpp  ListClientEntriesCommandHandlerTest.cpp  ListFileEntriesHandlerTest.cpp  ListFileEntriesResponseTest.cpp  ListServerDirectoriesRequestTest.cpp  ListServerDirectoriesResponseTest.cpp  ListServerEntriesCommandHandlerTest.cpp  ListServerEntriesResponseHandlerTest.cpp  RemoveFileCommandHandlerTest.cpp  RemoveFileHandlerTest.cpp  RemoveFileRequestTest.cpp  SyncEntriesResponseHandlerTest.cpp  SyncFileResponseHandlerTest.cpp  UpdateBackupsListRequestTest.cpp  UploadFileRequestTest.cpp
tests/infra/messaging/: AsyncMessageListenerTest.cpp  BlockingCommandListenerTest.cpp  BlockingMessageListenerTest.cpp  ConnectionListenerTest.cpp  MessageTest.cpp  MockCommandHandler.h  MockListenerLoop.h  MockMessageHandler.h  MockMessageListener.h  MockMessageListenerFactory.h  MockMessageStreamer.h  MockSocket.h  OpenListenerLoopTest.cpp  SerializedMessageHandlerTest.cpp  SocketMessageStreamerTest.cpp  TcpSocketTest.cpp
tests/infra/repository/: DefaultUserRepositorytest.cpp  FileUserRepositoryTest.cpp  SystemFileRepositoryTest.cpp  file_user_repository_test.cpp
tests/server/: DefaultUserTest.cpp  FileEntryTest.cpp  FileTest.cpp  MockClock.h  MockFileRepository.h  MockReplicaManagers.h  MockUser.h  MockUserRepository.h  RemovedEntryTest.cpp  ReplicaManagersTest.cpp  SystemClockTest.cpp  TimestampsTest.cpp  UserBuilder.h  UserTest.cpp  user_builder.h  user_test.cpp
